# Heisenbugs

./: .gitignore  CMakeLists.txt  README.md  StreakTracker.hpp  exam_scores.txt  flashcard_data.txt  flashcards_COA.txt  flashcards_DSA.txt  flashcards_EEE.txt  flashcards_OOP.txt  quizzes.txt  sessions_db.txt  studyplan.h  todo  todo.csv  user_db.txt
include/: Analytics.hpp  Course.hpp  DataHandler.hpp  ExamScoreTracker.hpp  Flashcard.hpp  FocusTimeAnalyzer.hpp  InsightException.hpp  Interface.hpp  NoData.hpp  NoQuiz.hpp  NoSession.hpp  PomodoroTimer.hpp  Profile.hpp  Quiz.hpp  Routine.hpp  Semester.hpp  SmartSuggestion.hpp  StreakTracker.hpp  StudySession.hpp  TimerBase.hpp  ToDoList.hpp  User.hpp  ai_insight.hpp  avgSession.hpp  breakR.hpp  class.hpp  productivityanalyzer.hpp  studyplan.hpp
src/: DataHandler.cpp  Interface.cpp  Quiz.cpp  main.cpp  studyplan.cpp  todolist.cpp
tests/: CMakeLists.txt  flashcards_LA.txt  test_profile.cpp  test_studysession.cpp  test_user.cpp  todolist.cpp
